// easyrepay.proto
//
// Compile with protoc --swift_out=. easyrepay.proto
//              protoc --dart_out=. easyrepay.proto

syntax = "proto3";

message PBDataStore {
    repeated PBPerson people = 1;
    PBSettings settings = 2;
}

message PBPerson {
    string id = 1;
    string name = 2;
    repeated PBTransaction transactions = 3;
    bool reminderActive = 4;
    uint64 reminderTimestamp = 5;
}

enum PBTransactionType {
    CREDIT = 0;
    DEBT = 1;
    SETTLE_CREDIT = 2;
    SETTLE_DEBT = 3;
}

message PBTransaction {
    string id = 1;
    PBTransactionType type = 2;
    double amount = 3;
    string description = 4;
    bool completed = 5;
    uint64 timestamp = 6;
}

message PBSettings {
    bool icloud = 1;
}
